Applied the jface popoup messages fix.